Add index page with newsletter signup

--- a/index.html
+++ b/index.html
@@ -8,66 +8,51 @@
 
 		<meta name="description" content="Website description here.">
 		
-		<style>			
-			*{
-				box-sizing: border-box;
-			}
-			
-			html,body, div{
-				margin:0;
-				padding:0;
-			}
-			
-			body{
-				line-height: 1.5em;
-				font-size: 1.25em;
-				font-family: georgia;
-				color: #333;
-			}
-			
-			.wrap{
-				margin: 0 auto;
-				max-width: 36em;
-			}
-			
-			h1,
-			h2,
-			h3{
-				margin: 2.5em 0 0 0;
-				font-family: arial;				
-				line-height: 1.5em;
-			}
-			
-			p{	
-				color: #555;
-				margin: 1.5em 0 0;
-			}
-			
-			.logo a {
-				text-decoration: none;
-				color: #333;
-			}
-			
-			.logo{
-				font-size: 0.875em
-			}
-		</style>
-		
 		<link href="/css/style.css" rel="stylesheet" type="text/css">
+
+		<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+		<style type="text/css">
+			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+		</style>
 	</head>
 	<body>
 		<div class="wrap"> 
-			<h2 class="logo"><a href="/">Open data pro</a></h2>
+			<h1 class="logo"><a href="/">Open data pro</a></h1>
+
+		<p>Each week I will post about open data and things you need to know to make it work for you. Meanwhile here's just a <a href="/why-open-data/">few ways open data can help</a> your business.</p>
+		
+		<!-- Begin MailChimp Signup Form -->
+
+		<div id="mc_embed_signup">
+		<form action="//opendatapro.us6.list-manage.com/subscribe/post?u=efa063e86bdfe87e8b8de8be4&amp;id=c55e7df0ed" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    <div id="mc_embed_signup_scroll">
+			<h2>Signup to get updates by e-mail</h2>
+		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+		<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+		</label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-FNAME">First Name </label>
+			<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-LNAME">Last Name </label>
+			<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+		</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		    <div style="position: absolute; left: -5000px;"><input type="text" name="b_efa063e86bdfe87e8b8de8be4_c55e7df0ed" tabindex="-1" value=""></div>
+		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		    </div>
+		</form>
 		</div>
 		
-		<div class="wrap">
-			<h1>Why care about open data?</h1>
-			
-			<p>Open data isn’t just a concept of offering and using free data, but rather a source of opportunity. It’s a chance to expand your business, grow your brand beyond it’s limits, a chance to become more than a data/service/product provider.</p>
-			
-			<p>Whether you have zero or incredible amounts of data, odds are you can benefit.</p>
-			
-			<p>Open data enables you to be transparent and build genuine trust. It's an opportunity to show you’re serious and reliable, a way to develop relationships, find trustworthy partners, improve your business, steer it and get new revenue streams. It's a way to become a market leader.</p>
+		<!--End mc_embed_signup-->
+		
 		</div>
 	</body>
 </html>
