--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
 		<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 		<style type="text/css">
-			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+			.logo{
+				margin-bottom: 7.5em;
+			}
+			
+			
+			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; margin: 7.5em 0  }
+			#mc_embed_signup form,
+			#mc_embed_signup .indicates-required,
+			#mc_embed_signup .mc-field-group{
+				margin: 0;padding:0;
+			}
+			#mc_embed_signup .mc-field-group{
+				width: 100%;
+			}
+			#mc_embed_signup .mc-field-group {padding-bottom:1.5em}
+			#mc_embed_signup input{font-size:1em; }
 		</style>
 	</head>
 	<body>
