Fix broken links

--- a/what-makes-open-data-open/index.html
+++ b/what-makes-open-data-open/index.html
@@ -40,7 +40,7 @@
 			
 			<h3>Human accessibility</h3>
 			
-			<p>While web [accessibility][1] deals mostly with ensuring people with disabilities are able to use and enjoy the web, it’s worth taking it a step further. Presenting data in a well designed way will further boost it’s usefulness. This means making it quickly understood, easy to navigate and providing an overall positive user experience.</p>
+			<p>While web <a href="http://www.w3.org/standards/webdesign/accessibility">accessibility</a> deals mostly with ensuring people with disabilities are able to use and enjoy the web, it’s worth taking it a step further. Presenting data in a well designed way will further boost it’s usefulness. This means making it quickly understood, easy to navigate and providing an overall positive user experience.</p>
 			
 			<p>In regards to “human accessibility” you should look into who might benefit from this data the most and tailor the experience to your target audience. </p>
 			
@@ -62,7 +62,7 @@
 			
 			<p>In the context of open data, machine accessibility means how easy it is for data to be understood by machines and how easy it is for developers to build solutions on top of it. </p>
 			
-			<p>While there are a few ways to <a href="[http://www.w3.org/DesignIssues/LinkedData.html]">measure (parts of) machine accessibility</a>, this remains a very broad topic covering:</p>
+			<p>While there are a few ways to <a href="http://www.w3.org/DesignIssues/LinkedData.html">measure (parts of) machine accessibility</a>, this remains a very broad topic covering:</p>
 			
 			<ul>
 			<li>formats</li>
