Expand link text
accessibility --> web accessibility

--- a/what-makes-open-data-open/index.html
+++ b/what-makes-open-data-open/index.html
@@ -40,7 +40,7 @@
 			
 			<h3>Human accessibility</h3>
 			
-			<p>While web <a href="http://www.w3.org/standards/webdesign/accessibility">accessibility</a> deals mostly with ensuring people with disabilities are able to use and enjoy the web, it’s worth taking it a step further. Presenting data in a well designed way will further boost it’s usefulness. This means making it quickly understood, easy to navigate and providing an overall positive user experience.</p>
+			<p>While <a href="http://www.w3.org/standards/webdesign/accessibility">web accessibility</a> deals mostly with ensuring people with disabilities are able to use and enjoy the web, it’s worth taking it a step further. Presenting data in a well designed way will further boost it’s usefulness. This means making it quickly understood, easy to navigate and providing an overall positive user experience.</p>
 			
 			<p>In regards to “human accessibility” you should look into who might benefit from this data the most and tailor the experience to your target audience. </p>
 			
