Add link to next post

--- a/why-open-data/index.html
+++ b/why-open-data/index.html
@@ -23,6 +23,9 @@
 			<p>Whether you have zero or incredible amounts of data, odds are you can benefit.</p>
 			
 			<p>Open data enables you to be transparent and build genuine trust. It's an opportunity to show you’re serious and reliable, a way to develop relationships, find trustworthy partners, improve your business, steer it and get new revenue streams. It's a way to become a market leader.</p>
+		
+			<h3>Read next</h3>
+			<a href="http://www.opendatapro.com/what-makes-open-data-open/">What makes open data open?</a>
 		</div>
 	</body>
 </html>
