Add link to next post

--- a/what-makes-open-data-open/index.html
+++ b/what-makes-open-data-open/index.html
@@ -78,6 +78,9 @@
 			<p>A great API not only makes (re)using data possible, but by extensions helps cover much of the human accessibility issues (other can build better solutions for each specific use case).</p>
 			
 			<p>While providing a high grade open data source can be challenging, doing so, combined with the right strategic approach, could mean unlocking great potential for everyone involved, including your business.</p>
+			
+			<h2>Read next<h2>
+			<a href="http://www.opendatapro.com/research-open-data/">How to boost the impact of your research paper with open data?</a>
 		</div>
 	</body>
 </html>
