Fix html syntax

--- a/what-makes-open-data-open/index.html
+++ b/what-makes-open-data-open/index.html
@@ -79,7 +79,7 @@
 			
 			<p>While providing a high grade open data source can be challenging, doing so, combined with the right strategic approach, could mean unlocking great potential for everyone involved, including your business.</p>
 			
-			<h2>Read next<h2>
+			<h2>Read next</h2>
 			<a href="http://www.opendatapro.com/research-open-data/">How to boost the impact of your research paper with open data?</a>
 		</div>
 	</body>
