--- a/_config.yml.html
+++ b/_config.yml.html
@@ -2,6 +2,11 @@ defaults:
   -
     scope:
       path: ""
+    values:
+      layout: "default"
+  -
+    scope:
+      path: ""
       type: "posts"
     values:
       layout: "post"
