--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+layout: default
 title: Home
 ---
 <p>Every Wednesday I post about open data and things you need to know to make it work for you.</p>
