permalink to lowercase

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 ---
 layout: sans_newsletter
 title: Contact
-permalink: /Contact/
+permalink: /contact/
 ---
 <h1>Contact</h1>
 <div id="wufoo-z1h0j0kp1fufrlt">
