--- a/_posts/2015-11-11-video.html
+++ b/_posts/2015-11-11-video.html
@@ -8,7 +8,7 @@ permalink: video
 
 <h2>The future of our cities and towns lies in… Open Data</h2>
 <p>Laurenellen McCann talks at TEDxMidAtlantic on the topic of smart cities and open data.</p>
-<iframe width="“560”" height="“315”" src="“https://www.youtube.com/embed/qy9wQyxdZ2I”" frameborder="“0”" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qy9wQyxdZ2I" frameborder="0" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> Laurenellen McCann <br>
 	<dt>Length</dt> <dd>7:30</dd>
@@ -16,7 +16,7 @@ permalink: video
 
 <h2>Open data changes lives</h2>
 <p>An inspirational talk at TEDxUCLA about how open data can be used to build products and services - several actual project example provided.</p>
-<iframe width="“560”" height="“315”" src="“https://www.youtube.com/embed/ThM6umznsWM”" frameborder="“0”" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ThM6umznsWM" frameborder="0" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>Jeanne Holm</dd> <br>
 	<dt>Length</dt> <dd>17:47</dd>
@@ -24,15 +24,15 @@ permalink: video
 
 <h2>Open Data - why it is better to know than not to know?</h2>
 <p>By giving a basic introduction to open data, the Tim Berners-Lee 5 star rating system and more, Alicia Peszkfowska invites you to use open data and build solutions to improve data everyday life.</p>
-<iframe width="“560”" height="“315”" src="“https://www.youtube.com/embed/90cEIbqT9hg”" frameborder="“0”" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/90cEIbqT9hg" frameborder="0" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>Alicia Peszkfowska</dd> <br>
 	<dt>Length</dt> <dd>11:03</dd>
 </dl>
 
 <h2>The year open data went worldwide</h2>
-<p>The legendary Tim Berners-Lee gives a follow up talk to his call for “raw data now” in 2009. He discusses how open data has evolved from the time he gave that talk to the TED University in 2010.</p>
-<iframe src="“https://embed-ssl.ted.com/talks/tim_berners_lee_the_year_open_data_went_worldwide.html”" width="“560”" height="“315”" frameborder="“0”" scrolling="“no”" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+<p>The legendary Tim Berners-Lee gives a follow up talk to his call for raw data now in 2009. He discusses how open data has evolved from the time he gave that talk to the TED University in 2010.</p>
+<iframe src="https://embed-ssl.ted.com/talks/tim_berners_lee_the_year_open_data_went_worldwide.html" width="560" height="315" frameborder="0" scrolling="no" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>Tim Berners-Lee</dd> <br>
 	<dt>Length</dt> <dd>5:26</dd>
@@ -40,7 +40,7 @@ permalink: video
 
 <h2>Open Data Means Better Science</h2>
 <p>At University of Minho Open Access Seminar &amp; <a href="https://www.openaire.eu">OpenAIRE</a> Interoperability Workshop, Jenny Molloy discusses open data in the context of scientific research.</p>
-<iframe src="“https://player.vimeo.com/video/59474174”" width="“500”" height="“400”" frameborder="“0”" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+<iframe src="https://player.vimeo.com/video/59474174" width="500" height="400" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>Jenny Molloy</dd> <br>
 	<dt>Length</dt> <dd>22:17</dd>
@@ -48,7 +48,7 @@ permalink: video
 
 <h2>World Bank Open Data</h2>
 <p>In an informal atmosphere several speakers talk about <a href="http://data.worldbank.org">open data provided by the World Bank</a>. Topics range from datasets to implementation and use. Please note that the talks are mostly very technical.</p>
-<iframe src="“https://player.vimeo.com/video/11843682”" width="“500”" height="“375”" frameborder="“0”" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+<iframe src="https://player.vimeo.com/video/11843682" width="500" height="375" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>Jeff McCoy, Frank Febbraro, Alex Barth, Michael Benedict</dd> <br>
 	<dt>Length</dt> <dd>21:36</dd>
@@ -56,7 +56,7 @@ permalink: video
 
 <h2>A Case for Open Data in Transit</h2>
 <p>Instead of a talk, this is a short film by <a href="http://www.streetfilms.org/a-case-for-open-data-in-transit/">Street films</a> on the topic of open data in transportation.</p>
-<iframe src="“https://player.vimeo.com/video/13764646?color=9086c0”" width="“500”" height="“281”" frameborder="“0”" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+<iframe src="https://player.vimeo.com/video/13764646?color=9086c0" width="500" height="281" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 <dl>
 	<dt>Speaker</dt> <dd>various</dd> <br>
 	<dt>Length</dt> <dd>6:11</dd>
