--- a/_posts/2015-11-11-video.html
+++ b/_posts/2015-11-11-video.html
@@ -10,7 +10,7 @@ permalink: video
 <p>Laurenellen McCann talks at TEDxMidAtlantic on the topic of smart cities and open data.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qy9wQyxdZ2I" frameborder="0" allowfullscreen=""></iframe>
 <dl>
-	<dt>Speaker</dt> Laurenellen McCann <br>
+	<dt>Speaker</dt> <dd>Laurenellen McCann</dd> <br>
 	<dt>Length</dt> <dd>7:30</dd>
 </dl>
 
