Update image src

--- a/_posts/2015-11-25-open-data-explained.html
+++ b/_posts/2015-11-25-open-data-explained.html
@@ -6,4 +6,4 @@ permalink: open-data-explained
 
 <h1>Illustrated explanation of open data</h1>
 <p>I find myself needing to explain what <em>open</em> data actually is and what it means. Hopefully, this illustrated explanation can help.</p>
-<img src=".img/open-data.png" alt="illustrated explanation of open data">
+<img src="//www.opendatapro.com/img/open-data.png" alt="illustrated explanation of open data">
