--- a/_posts/2015-12-16-5-layers-of-open-data.html
+++ b/_posts/2015-12-16-5-layers-of-open-data.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 5-layers-of-open-data
+title: 5 layers of open data
 permalink: layers-of-open-data
 ---
 
-<h1>Illustrated explanation of open data</h1>
-<p>I find myself needing to explain what <em>open</em> data actually is and what it means. Hopefully, this illustrated explanation can help.</p>
+<h1>5 layers of open data</h1>
+<p>Most of what goes on with any open data project can be summarised in 5 layers.</p>
 <img src="//www.opendatapro.com/img/5-layers-of-open-data.png" alt="5 layers of open data; compliance, API, developers, design, end-users">
